client/src/style/index.scss
$bg-color: hsl(228, 10, 88);
$mid-color: hsl(222, 10, 34);
$fore-color: hsl(228, 20, 97);
$tag-color: hsl(91, 19, 54);
$primary-color: hsl(91, 19, 54);

$disabled-color: #6e6363;
$border-color: #353434;
$danger-color: #e53939;
$progress-color: #86ec86;
$link-color: #86ec86;

$card-spacing: 1rem;

$log-spacing: 0.5rem;
$log-menu-button-size: 1rem;

$text-size-small: 0.7rem;
$text-size: 1.5rem;
$text-size-medium: 2rem;
$text-size-large: 2.5rem;

$border-radius: 0.4rem;

html,
body {
  background-color: $bg-color !important;
}

.dev-log {
  .mx-auto {
    margin: 0 auto;
  }

  button,
  .button {
    margin-bottom: 1rem;
    padding: $log-spacing;
    border-radius: $border-radius;
    padding: 0.3rem 0.8rem;

    color: $mid-color;
    background-color: $bg-color;
  }

  .container {
    padding: 0 1rem;
    margin: 0 auto;
  }

  .card {
    color: $fore-color;
    background-color: $mid-color;
    margin-bottom: $card-spacing;
    padding: $card-spacing;
    border-radius: $border-radius;

    &__header,
    &__body,
    &__footer {
      margin-bottom: $card-spacing;
    }

    &__header {
      font-size: $text-size-large;
    }

    &__footer {
      margin-top: $card-spacing;
    }

    button,
    .button {
      color: $mid-color;
      background-color: $bg-color;
    }
  }

  .form-input {
    label {
      display: inline-block;
    }

    input {
      border-radius: $border-radius;
      color: $mid-color;
      background-color: $bg-color;
    }
  }

  .icon {
    display: inline-block;
    line-height: 1rem;
    color: currentColor;
    vertical-align: middle;
  }

  .hide {
    display: none;
  }

  .link {
    box-shadow: inset 0 -0.2rem 0 0 $primary-color;
    transition: 100ms;

    &:hover {
      box-shadow: inset 0 -0.6rem 0 0 $primary-color;
    }
  }

  // button.primary { // todo
  //   background-color: $primary-color;
  // }

  button:disabled,
  button[disabled] {
    opacity: 0.75;
  }

  // todo margin and paddings here
  $sizes: (1, 2, 3, 4, 5, 6, 7, 8, 9);
  @each $val in $sizes {
    .icon\:#{$val} {
      @extend .icon;
      width: #{$val}rem;
      height: #{$val}rem;
    }
  }

  $media-xl: 80rem;
  $media-lg: 62rem;
  $media-md: 48rem;
  $media-sm: 30rem;
  $media-xs: 20rem;

  $breakpoints: (
    xl: $media-xl,
    lg: $media-lg,
    md: $media-md,
    sm: $media-sm,
    xs: $media-xs,
  );

  $breakpoints-medium-up: (
    xl: $media-xl,
    lg: $media-lg,
    md: $media-md,
  );

  $breakpoints-medium-down: (
    sm: $media-sm,
    xs: $media-xs,
  );

  // css from max size and down
  @each $key, $val in $breakpoints {
    @media (max-width: $val) {
      .hide\:#{$key} {
        display: none;
      }

      .full\:#{$key} {
        width: 100%;
      }
    }
  }

  // css between each case
  $breakpoints-between: (
    xl: (
      $media-lg,
      200rem,
    ),
    lg: (
      $media-md,
      $media-lg,
    ),
    md: (
      $media-sm,
      $media-md,
    ),
    sm: (
      $media-xs,
      $media-sm,
    ),
    xs: (
      1rem,
      $media-xs,
    ),
  );

  @each $key, $val in $breakpoints-between {
    @media screen and (min-width: nth($val, 1)) and (max-width: (nth($val, 2) - 0.01rem)) {
      .hide\@#{$key} {
        display: none;
      }

      .show\@#{$key} {
        display: inline-block;
      }

      .full\@#{$key} {
        width: 100%;
      }
    }
  }

  @each $key, $val in $breakpoints {
    .max-#{$key} {
      max-width: $val;
    }

    .card\:#{$key} {
      @extend .card;
      max-width: $val;
    }

    .container\:#{$key} {
      @extend .container;
      max-width: $val;
    }
  }

  @each $key, $val in $breakpoints-medium-down {
    @media (max-width: $val) {
      .container {
        padding: 0;
      }
    }
  }

  .socials-bar {
    display: flex;
    flex-wrap: wrap;

    .social {
      flex: 1 1 auto;
      margin: 0.25rem 0.5rem;
    }
  }

  .log {
    margin: 1rem 0;
    padding: $log-spacing;
    padding-top: ($log-spacing * 0.25);
    padding-right: ($log-spacing * 3);
    color: $fore-color;
    background-color: $mid-color;
    border-radius: $border-radius;
    border-top-right-radius: 0;

    position: relative;

    &-text {
      word-wrap: break-word;
      text-overflow: ellipsis;
      margin-bottom: ($log-spacing * 2);
    }

    &-tags {
      position: absolute;
      z-index: 1;
      right: 0;
      bottom: -0.66rem;

      .tags {
        display: inline-block;
        margin-right: $log-spacing;

        .tag {
          display: inline-block;
          margin: ($log-spacing * 0.3) ($log-spacing * 0.6);
          padding: 0.1rem 0.5rem;
          background-color: $tag-color;
          border-radius: $border-radius;

          &:last-of-type {
            margin: 0;
          }
        }
      }
    }

    &-date {
      position: absolute;
      left: $log-spacing;
      bottom: ($log-spacing * 0.5);
      font-size: $text-size-small;
      font-weight: bold;
      opacity: 0.7;
    }

    &-menu {
      position: absolute;
      right: ($log-spacing * 0.5);
      top: ($log-spacing * 0.5);

      color: $fore-color;
      background-color: unset;
      fill: $fore-color;

      margin: 0;
      padding: 0;
      border-radius: unset;

      overflow: hidden;
      width: $log-menu-button-size;
      height: $log-menu-button-size;

      .icon {
        width: $log-menu-button-size;
        height: $log-menu-button-size;
        vertical-align: top;
      }
    }

    &__input {
      padding: $log-spacing;
      padding-bottom: ($log-spacing * 2);
      position: relative;
      overflow: hidden;
      background-color: $mid-color;

      button {
        margin-bottom: 0;
        background-color: unset;
        padding: 0;
        margin-left: $log-spacing;

        .icon {
          fill: $fore-color;
        }
      }

      &-progress {
        pointer-events: none;
        transition: width 0.3s ease-out, background-color 1.5s;
        background-color: $progress-color;
        position: absolute;
        left: 0;
        bottom: 0;
        height: 5px;

        &.invalid {
          opacity: 0.66;
          background-color: $danger-color;
        }
      }
    }
  }

  //
  //
  //.alert {
  //  position: absolute;
  //  top: 1rem;
  //  left: 1rem;
  //  right: 2rem;
  //  z-index: 100;
  //}
  //
  //.socials-bar {
  //  display: flex;
  //  flex-wrap: wrap;
  //
  //  .social {
  //    flex: 1 1 auto;
  //    margin: 0.25rem 0.5rem;
  //    padding: 0.3rem 0.8rem;
  //    background-color: rgba(0,0,0,0.1);
  //    border-radius: 0.2rem;
  //  }
  //}
  //

  //
  //&.chakra-container {
  //  margin-top: 0.75rem;
  //  padding: 0;
  //}
  //
  //.chakra-card {
  //  box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.1);
  //  border: 1px solid rgba(100,100,100,0.2);
  //
  //  .action {
  //    display: block;
  //    margin-left: auto;
  //    padding: 0 1.5rem;
  //  }
  //}
  //
  //.block {
  //  display: block;
  //}
  //
  //.dev-log-border {
  //  border: 0.66px solid $border-color;
  //}
  //
  //input {
  //  //@extend .dev-log-border;
  //  background-color: white;
  //}
  //
  //
  //
  //.log {
  //  &__card {
  //    //background-color: $mid-color;
  //
  //    &-text { cursor: default; }
  //  }
  //
  //  &__tag { cursor: default; }
  //
  //  &__tags { z-index: 1; }
  //
  //

  //}
}
//
//
//
//.warning {
//  background-color: darkorange !important;
//}
//.danger {
//  background-color: $danger-color;
//}

